--- a/ccd-ui/package.json
+++ b/ccd-ui/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bulma": "^1.0.2",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
